// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders TextInput component 1`] = `
<input
  className="TextInput"
  name={undefined}
  onChange={undefined}
  placeholder=""
  type="text"
  value=""
/>
`;

exports[`Renders TextInput component with passed placeholder prop 1`] = `
<input
  className="TextInput"
  name={undefined}
  onChange={undefined}
  placeholder="First Name"
  type="text"
  value=""
/>
`;
